--- a/service2/Dockerfile
+++ b/service2/Dockerfile
@@ -5,15 +5,8 @@ COPY . /source
 
 WORKDIR /source
 
-# Build the application.
-# Leverage a cache mount to /root/.nuget/packages so that subsequent builds don't have to re-download packages.
-RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages \
-    dotnet publish -a x64 --use-current-runtime --self-contained false -o /app
+RUN dotnet publish -a x64 --use-current-runtime --self-contained false -o /app
 
-
-
-# Create a new stage for running the application that contains the minimal
-# runtime dependencies for the application.
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine3.18-amd64 AS final
 WORKDIR /app
 
@@ -21,18 +14,5 @@ WORKDIR /app
 COPY --from=build /app .
 
 EXPOSE 8000
-
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#user
-ARG UID=10001
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "/nonexistent" \
-    --shell "/sbin/nologin" \
-    --no-create-home \
-    --uid "${UID}" \
-    appuser
-USER appuser
 
 ENTRYPOINT ["dotnet", "service2.dll"]
