Detach when running docker compose up, to allow the pipeline to succeed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,4 +17,4 @@ docker-compose-up:
   stage: deploy 
   environment: production
   script:
-    - docker compose up
+    - docker compose up --detach
