Update pipeline to contain moving to the right directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,9 @@ docker-compose-build:
 test-job:   
   stage: test   
   script:
+    - cd tests
     - npm test
+
 
 docker-compose-up:      
   stage: deploy 
