Add a docker compose down step to ensure that the pipeline can be run sequentially multiple times without manually closing the system

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,12 @@ stages:
   - test
   - deploy
 
+# Close the software if it is running from a previous run of the pipeline to allow the new version to be started
+docker-compose-down:
+  stage: build
+  script:
+    docker compose down
+
 docker-compose-build:       
   stage: build
   script:
