--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-# No network is defined here because docker automatically does that, so that is redundant work
-# And services are refered to by their names, because refering to them using the IP is asinine
 name: "sj430842"
 services:
   service1:
@@ -23,8 +21,13 @@ services:
         condition: service_started
   monitor:
     build: ./monitor
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+  api-gateway:
+    build: ./api_gateway
     ports:
-      - 8087:8087
+      - 8083:8083
     depends_on:
       rabbitmq:
         condition: service_healthy
