--- a/api_gateway/package.json
+++ b/api_gateway/package.json
@@ -9,7 +9,8 @@
   "author": "Sebastian Jokela",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "redis": "^4.6.12"
   },
   "type": "module"
 }
